<resources>
    <string name="app_name">ElternTrainingApp</string>
    <string name="register">Register</string>
    <string name="passwort">Passwort</string>
    <string name="birthday">Birthday</string>
    <string name="passwort_best_tigen">Passwort bestätigen</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="registerview">registerView</string>
    <string name="radiobutton">RadioButton</string>
    <string name="button">Button</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Einloggen</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daten_vorname">Vorname:</string>
    <string name="daten_nachname">Nachname:</string>
    <string name="daten_username">Username:</string>
    <string name="daten_email">Email:</string>
    <string name="daten_konto">Konto:</string>
    <string name="change_pwd">Password ändern</string>
    <string name="add_friend">Familienmitglieder hinzufügen</string>
    <string name="familien_regeln">Familienregeln</string>
    <string name="neue_regel">Neue Regel</string>
    <string name="aktualisieren">Aktualisieren</string>
    <string name="eltern_training_app">Eltern Training App</string>
    <string name="Familienmitglieder">Familienmitglieder</string>
    <string name="detachFamilyBtn">Familientrennung</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="add_mitglied">Hinzufügen</string>
    <string name="selfportrait_title">Übung zum Selbstbild des Kindes</string>
    <string name="selfportait_text">Was glaubt mein Kind von sich selbst (Bitte schreiben Sie in der Ich-Person) ?</string>
    <string name="strengths">Stärke</string>
    <string name="weaknesses">Schwäche</string>
    <string name="addQuality">Eigenschaft hinzufügen</string>
    <string name="back_de">Zurück</string>
    <string name="similarity">Übereinstimmung zeigen</string>
    <string name="add_edit_emotions">Gefühle eingeben/aktualisieren</string>
    <string name="freude">Freude</string>
    <string name="traurigkeit">Traurigkeit</string>
    <string name="mut">Mut</string>
    <string name="angst">Angst</string>
    <string name="aerger">Ärger</string>
    <string name="angenehm">Angenehm</string>
    <string name="stolz">Stolz</string>
    <string name="enttaeuscht">Enttäusch.</string>

    //Calendar
    <string name="action_today">Heute</string>
    <string name="action_day_view">Tagansicht</string>
    <string name="action_three_day_view">3 Tage-ansicht</string>
    <string name="action_week_view">Wochenansicht</string>
    <string name="title_activity_basic">Basic Beispiel</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Fehler auf dem Server</string>
    <string name="savePdf">Als PDF speichern</string>
    <string name="go_back">Zurück</string>
    <string name="kontrollieren">Kontrollieren</string>
    <string name="reset_de">Zurücksetzen</string>
    <string name="realistisch">Realistisch:</string>
    <string name="unrealistisch">Unrealistisch:</string>
    <string name="oldGoals">Alte Eingabe kontrollieren</string>
    <string name="title_activity_quiz_duel">QuizDuelActivity</string>
    <string name="weiter">Weiter</string>
</resources>
